--- a/css/global.css
+++ b/css/global.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: 'My Lucida';
     src: url('../font/LucidaGrande.ttf');
-    font-style: normal; 
+    font-style: normal;
     font-weight: bold;
 }
 
-* { 
+* {
     font-family: 'My Lucida', Console;
 }
 
@@ -22,13 +22,13 @@ a {
     padding: 25px 0;
 }
 
-body > header {
+body>header {
     margin-bottom: 20px;
     background: white;
     box-shadow: 1px 0px 8px rgb(200, 200, 200);
 }
 
-header .logo-search form  {
+header .logo-search form {
     width: 50%;
 }
 
@@ -37,7 +37,7 @@ header .user {
 }
 
 header .user a {
-    font-size: 13px;
+    font-size: 13em;
     color: #89949b;
     padding-top: 5px;
 }
@@ -54,13 +54,13 @@ main article {
 h3 {
     color: #b8c3c9;
     text-transform: uppercase;
-    font-size: 11px;
+    font-size: 11em;
     font-weight: normal;
     margin-bottom: 10px;
 }
 
-nav ul li a { 
-    font-size: 14px;
+nav ul li a {
+    font-size: 1em;
     font-weight: normal;
     color: #828c92;
 }
@@ -85,30 +85,31 @@ nav ul li:last-child {
 
 h1 {
     color: #4b5c66;
-    font-size: 24px;
+    font-size: 24em;
     font-weight: normal;
     margin: 0 0 8px 0;
 }
 
-.name p { 
+.name p {
     color: #a0aab1;
-    font-size: 12px;
+    font-size: 1em;
 }
 
-.name p img { 
+.name p img {
     margin-left: 12px;
 }
 
 
 .stats-links {
     color: #4b5c66;
-    font-size: 12px;
+    font-size: 1em;
     padding: 15px 0px 10px 0px;
     border-bottom: 1px solid #e1e6e9;
     margin-bottom: 20px;
 }
 
-.stats-links span, .stats-links a {
+.stats-links span,
+.stats-links a {
     margin-right: 20px;
 }
 
@@ -117,13 +118,13 @@ h1 {
 }
 
 .stats-links a {
-    font-size: 12px;
+    font-size: 1em;
     font-weight: normal;
     color: #4b5c66;
 }
 
 h2 {
-    font-size: 20px;
+    font-size: 20em;
     font-weight: normal;
     color: #4b5c66;
 }
@@ -137,7 +138,7 @@ input.search {
     box-shadow: none;
     height: 28px;
     width: 100%;
-    font-size: 13px;
+    font-size: 13em;
     padding: 3px 6px 3px 25px;
     border: 1px solid #d0dde9;
     margin: 0;
@@ -151,7 +152,7 @@ input.submit {
 }
 
 .station {
-    font-size: 12px;
+    font-size: 1em;
     color: #008fd5;
     border-radius: 5px;
     border: 1px solid #b8c3c9;
@@ -170,7 +171,7 @@ input.submit {
 
 
 #albums article {
-    font-size: 13px;
+    font-size: 1em;
     color: #89949b;
     margin: 10px 0;
 }
@@ -193,7 +194,8 @@ input.submit {
     text-overflow: ellipsis;
 }
 
-#albums article .artist, #albums article .count {
+#albums article .artist,
+#albums article .count {
     margin-top: 4px;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -204,18 +206,66 @@ input.submit {
     margin-left: 5px;
 }
 
-nav.browse a, nav.music a {
+nav.browse a,
+nav.music a {
     padding-left: 20px;
     padding-top: 2px;
 }
 
-nav a.heavy { background: url("../img/icon/heavy.png") no-repeat 0px; }
-nav a.recent { background: url("../img/icon/recent.png") no-repeat 0px; }
-nav a.top { background: url("../img/icon/top.png") no-repeat 0px; }
-nav a.new { background: url("../img/icon/new.png") no-repeat 0px; }
-nav a.collection { background: url("../img/icon/collection.png") no-repeat 0px; }
-nav a.history { background: url("../img/icon/history.png") no-repeat 0px; }
+nav a.heavy {
+    background: url("../img/icon/heavy.png") no-repeat 0px;
+}
 
+nav a.recent {
+    background: url("../img/icon/recent.png") no-repeat 0px;
+}
 
+nav a.top {
+    background: url("../img/icon/top.png") no-repeat 0px;
+}
 
+nav a.new {
+    background: url("../img/icon/new.png") no-repeat 0px;
+}
 
+nav a.collection {
+    background: url("../img/icon/collection.png") no-repeat 0px;
+}
+
+nav a.history {
+    background: url("../img/icon/history.png") no-repeat 0px;
+}
+
+@media only screen and (max-width: 200px) {
+    .search {
+        display: none;
+    }
+}
+
+/*Mobile*/
+@media only screen and (max-width: 480px) {
+    .share {
+        display: none;
+    }
+}
+
+/*Tablette*/
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+    * {
+        font-size: 1em;
+    }
+}
+
+/*Desktop*/
+@media only screen and (min-width: 769px) and (max-width: 992px) {
+    * {
+        font-size: 1em;
+    }
+}
+
+/*Huge*/
+@media only screen and (min-width: 993px) {
+    * {
+        font-size: 1em;
+    }
+}
